fix misaligned text

--- a/week01/2.layout/solution/index.css
+++ b/week01/2.layout/solution/index.css
@@ -28,7 +28,7 @@ p {
 .item {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
 }
 
 button {
@@ -44,4 +44,8 @@ button {
 
 button:hover {
   background-color: red;
+}
+
+img {
+  height: 80px;
 }
